Fixed Featured article not showing

--- a/css/main.css
+++ b/css/main.css
@@ -269,14 +269,9 @@ nav ul li:hover .dropdown a:hover {
 }
 
 #featured {
-<<<<<<< HEAD
-  width: calc(100%/2.15);
-  margin: 0.5% 1.25% 0 0.25%;
-=======
   width: 74.3%;
   /*width: calc(100%/1.5);*/
   margin: 0.3% 1.7% 0 0;
->>>>>>> origin/master
 }
 
 #featured > .preview-box {
